fixed text alignment

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -108,13 +108,11 @@ body {
         font-size: $small-font-title;
         font-weight: 800;
         font-size: 32px;
-        text-align: center !important;
     }
     .welcome-box-description {
         font-weight: 400;
         font-size: 18px;
         color: black;
-        text-align: center !important;
     }
     .welcome-button {
         font-weight: 400;
